# tg-vault

./: .gitignore  .proxy_settings.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fa.md  README.md  config.README.md  config.sample.json  downloads.json  gui.py  index.html  pyproject.toml  requirements.txt  tg.py  tg_compression.py  tg_crypto.py  tg_db.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  SECURITY.md  TELEGRAM_LIMITS.md  USAGE.md  _config.yml  cloudflare-worker.js  index.html
examples/: backup_directory.py  bulk_download.py  bulk_upload.py  db_search.py  download_all.py  encrypted_upload.py  parallel_uploads.py
gui/: __init__.py  app.py
tests/: test_smoke.py
tg_vault/: __init__.py  __main__.py  bot_pool.py  chunk_header.py  cli.py  commands.py  compression.py  config.py  constants.py  crypto.py  db.py  db_sync.py  download_manager.py  downloader.py  interactive.py  orphan_scanner.py  pyrogram_bot.py  uploader.py  utils.py
